@@ -24,6 +24,10 @@ Features
   ``431 Request Header Fields Too Large`` in ``pyramid.httpexceptions``.
   See https://github.com/Pylons/pyramid/pull/1372/files
 
+- The ``pshell`` script will now load a ``PYTHONSTARTUP`` file if one is
+  defined in the environment prior to launching the interpreter.
+  See https://github.com/Pylons/pyramid/pull/1299
+
 Bug Fixes
 ---------
 
